correct filter header to be aligned

--- a/src/app/layout/sidebar/checkbox-filter/checkbox-filter.component.scss
+++ b/src/app/layout/sidebar/checkbox-filter/checkbox-filter.component.scss
@@ -3,6 +3,3 @@ section{
     flex-direction: column
 }
 
-mat-card-header{
-    align-items: center;
-}
